--- a/nginx.conf
+++ b/nginx.conf
@@ -1,76 +1,55 @@
-# Nginx Configuration for VerterVpn Frontend
+# Nginx Server Block for VerterVpn Frontend
 # Optimized for High Performance and Security
+# Place this in /etc/nginx/sites-available/verter-frontend
 
-user  nginx;
-worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/log/nginx/nginx.pid;
+# Rate Limiting Zones (These should ideally be in the main /etc/nginx/nginx.conf http block)
+limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+limit_conn_zone $binary_remote_addr zone=addr:10m;
 
-events {
-    worker_connections  2048;
-    multi_accept on;
-    use epoll;
-}
+server {
+    listen 80;
+    server_name verter.kevinsvega.online; # <--- CAMBIA ESTO POR TU DOMINIO REAL
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    root /var/www/verter-vpn/dist; # <--- RUTA ABSOLUTA A TU CARPETA DIST
+    index index.html;
 
-    # Basic Settings
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-    keepalive_timeout  65;
-    types_hash_max_size 2048;
-    server_tokens off; # Hide nginx version
-
-    # Gzip Compression
+    # Gzip Compression (Optional if not enabled globally)
     gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain text/css application/json application/javascript text/xml;
 
-    server {
-        listen       80;
-        server_name  localhost;
+    # Security Headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # SPA Routing
+    location / {
+        limit_req zone=one burst=20 nodelay;
+        limit_conn addr 10;
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+
+    # Cache Static Assets (Vite hashes filenames)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+        access_log off;
+        log_not_found off;
+    }
+
+    # Health Check
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+    }
+
+    # Error Pages
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
         root   /usr/share/nginx/html;
-        index  index.html;
-
-        # Security Headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-        # SPA Routing
-        location / {
-            try_files $uri $uri/ /index.html;
-            add_header Cache-Control "no-store, no-cache, must-revalidate";
-        }
-
-        # Cache Static Assets (Vite hashes filenames)
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf)$ {
-            expires 1y;
-            add_header Cache-Control "public, no-transform";
-            access_log off;
-            log_not_found off;
-        }
-
-        # Health Check
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-        }
-
-        # Error Pages
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
     }
 }
